cmake: moving creation of 'common' library to 'common' directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,12 +35,7 @@ add_library_path(src/utils utils)
 add_library_path(src/math math EXPERIMENTAL)
 add_library_path(src/palgorithm palgorithm)
 add_library_path(src/putils putils)
-
-set(LIBRARY_HEADERS src/common/debug.hpp src/common/std_macros.hpp src/common/str_op.hpp src/common/open_library_settings.hpp)
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
-add_library(common SHARED src/common/str_op.cpp ${LIBRARY_HEADERS})
-register_target(NAME common HEADERS ${LIBRARY_HEADERS} SOURCES src/common/str_op.cpp)
+add_library_path(src/common common)
 
 getHeadersPath(HEADERS_INSTALL_PATH)
 getHeadersBasePath(HEADERS_INSTALL_BASE_PATH)
