--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -22,7 +22,7 @@ set(LIB_HEADERS
 
 qt5_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
 
-add_library(QtExt ${LIB_SRC} ${LIB_MOCFILES} ${LIB_HEADERS})
+add_library(QtExt SHARED ${LIB_SRC} ${LIB_MOCFILES} ${LIB_HEADERS})
 turnOnCpp11(QtExt)
 
 target_link_libraries(QtExt Qt5::Widgets)
