--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -17,7 +17,7 @@ backup=()
 options=()
 install=
 changelog=
-source=($pkgname-$pkgver.tar.gz)
+source=(https://codeload.github.com/Kicer86/$pkgname/tar.gz/v$pkgver)
 noextract=()
 md5sums=('e36833572d14b7f502793c2a13108fbc')
 
