deprecating old and never used stuff

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -5,12 +5,10 @@ cmake_minimum_required(VERSION 2.8)
 include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src)
 
 set(LIB_SOURCES
-    cpuinfo.cpp
     )
 
 set(LIB_HEADERS
     data_ptr.hpp
-    cpuinfo.hpp
     optional.hpp
 )
 
@@ -21,7 +19,7 @@ set(TEST_SRC
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-add_library(utils SHARED ${LIB_SOURCES} ${LIB_HEADERS})
+#add_library(utils SHARED ${LIB_SOURCES} ${LIB_HEADERS})
 
 register_target(NAME utils
                 SOURCES {LIB_SOURCES}
