--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,14 +31,14 @@ enable_testing()
 add_custom_target(valgrind_test)           #all valgrind tests should attach here
 
 add_library_path(src/htmlParser htmlParser)
-add_library_path(qextserialport qextserialport EXPERIMENTAL)
+#add_library_path(qextserialport qextserialport EXPERIMENTAL)
 add_library_path(src/router router EXPERIMENTAL)
 add_library_path(src/QtExt QtExt)
 add_library_path(src/utils utils)
-add_library_path(src/math math EXPERIMENTAL)
-add_library_path(src/palgorithm palgorithm)
+#add_library_path(src/math math EXPERIMENTAL)
+#add_library_path(src/palgorithm palgorithm)
 add_library_path(src/putils putils)
-add_library_path(src/common common)
+#add_library_path(src/common common)
 
 getHeadersPath(HEADERS_INSTALL_PATH)
 getHeadersBasePath(HEADERS_INSTALL_BASE_PATH)
