resotring 'common' library to fix htmlParser and router build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ add_library_path(src/utils utils)
 #add_library_path(src/math math EXPERIMENTAL)
 #add_library_path(src/palgorithm palgorithm)
 add_library_path(src/putils putils)
-#add_library_path(src/common common)
+add_library_path(src/common common)
 
 getHeadersPath(HEADERS_INSTALL_PATH)
 getHeadersBasePath(HEADERS_INSTALL_BASE_PATH)
