utils: CMakeLists fix

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -22,5 +22,5 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 #add_library(utils SHARED ${LIB_SOURCES} ${LIB_HEADERS})
 
 register_target(NAME utils
-                SOURCES {LIB_SOURCES}
+                SOURCES ${LIB_SOURCES}
                 HEADERS ${LIB_HEADERS})
