--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ add_custom_target(valgrind_test)           #all valgrind tests should attach her
 add_library_path(src/htmlParser htmlParser)
 #add_library_path(qextserialport qextserialport EXPERIMENTAL)
 add_library_path(src/router router EXPERIMENTAL)
-add_library_path(src/QtExt QtExt)
+add_library_path(src/QtExt QtExt EXPERIMENTAL)
 add_library_path(src/utils utils)
 #add_library_path(src/math math EXPERIMENTAL)
 #add_library_path(src/palgorithm palgorithm)
