--- a/src/putils/CMakeLists.txt
+++ b/src/putils/CMakeLists.txt
@@ -5,7 +5,6 @@ cmake_minimum_required(VERSION 2.8)
 include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src )
 
 set(LIB_SOURCES
-    ts_resource.cpp
     )
 
 set(LIB_HEADERS
@@ -16,6 +15,6 @@ set(LIB_HEADERS
 set(TEST_SRC
     )
 
-add_library(putils SHARED ${LIB_SOURCES} ${LIB_HEADERS})
+#add_library(putils SHARED ${LIB_SOURCES} ${LIB_HEADERS})
 
 register_target(NAME putils SOURCES ${LIB_SOURCES} HEADERS ${LIB_HEADERS})
