--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(OPENLIBRARY_VERSION
   ${OPENLIBRARY_MAJOR_VERSION}.${OPENLIBRARY_MINOR_VERSION}.${OPENLIBRARY_PATCH_VERSION})
 set(OPENLIBRARY_NAMESPACE OpenLibrary::)
 
+option(BUILD_TESTS "Build tests. Set to ON to build tests")
+
 #prepare paths
 if(WIN32 AND NOT CYGWIN)
   set(DEF_INSTALL_CMAKE_DIR CMake)
@@ -24,10 +26,9 @@ include(GenerateExportHeader)
 include(${PROJECT_SOURCE_DIR}/cmake/functions.cmake)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-enable_testing()
-
-#prepare target for running tests
-add_custom_target(valgrind_test)           #all valgrind tests should attach here
+if(BUILD_TESTS)
+    enable_testing()
+endif()
 
 add_library_path(src/htmlParser htmlParser)
 #add_library_path(qextserialport qextserialport EXPERIMENTAL)
@@ -56,7 +57,8 @@ install(FILES ${CMAKE_SOURCE_DIR}/cmake/OpenLibraryUse.cmake DESTINATION ${OPENL
 #     message("${var} = ${${var}} ")
 # endforeach()
 
-
-add_custom_target(RunUnitTests ALL
+if(BUILD_TESTS)
+    add_custom_target(RunUnitTests ALL
                       COMMAND ctest
                       DEPENDS putils_tests)
+endif()
