CMake: removing EXPERIMENTAL flag for QtExt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ endif()
 add_library_path(src/htmlParser htmlParser EXPERIMENTAL)
 #add_library_path(qextserialport qextserialport EXPERIMENTAL)
 add_library_path(src/router router EXPERIMENTAL)
-add_library_path(src/QtExt QtExt EXPERIMENTAL)
+add_library_path(src/QtExt QtExt)
 add_library_path(src/utils utils)
 #add_library_path(src/math math EXPERIMENTAL)
 #add_library_path(src/palgorithm palgorithm)
