--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,15 @@ language: cpp
 branches:
   only:
     - travis_test
+    
+addons:
+  apt:
+    packages:
+      - qtbase5-dev
 
 notifications:
     on_failure: never
     on_success: never
-    
-before_install:
-    # setup Qt 5.5 which is not in Ubuntu by default
-  - sudo add-apt-repository ppa:beineri/opt-qt551-trusty -y
-  - sudo apt-get -qq update
-  - sudo sudo apt-get install -qq qt55base qt55svg
-  - source /opt/qt55/bin/qt55-env.sh
     
 before_script:
   - mkdir build
