move public includes to public section

--- a/src/utils_qt/CMakeLists.txt
+++ b/src/utils_qt/CMakeLists.txt
@@ -12,8 +12,10 @@ add_library(utils_qt SHARED
 
 target_include_directories(utils_qt
                             PRIVATE
-                                ${PROJECT_SOURCE_DIR}/src/includes
                                 ${PROJECT_SOURCE_DIR}/src               #todo: should be removed when all sublibs are setup as utils_qt
+
+                            PUBLIC
+                                ${PROJECT_SOURCE_DIR}/src/includes
                                 ${PROJECT_BINARY_DIR}/includes
 )
 
