preparations for test

--- a/tests/utils_qt/CMakeLists.txt
+++ b/tests/utils_qt/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(GTest REQUIRED)
 
 set(SRC
         configuration_tests.cpp
+        iconfiguration_storage_mock.hpp
     )
 
 add_executable(utils_qt_tests ${SRC})
@@ -15,6 +16,15 @@ target_link_libraries(utils_qt_tests
                             ${GMOCK_LIBRARY}
                             ${GTEST_LIBRARY}
                             ${CMAKE_THREAD_LIBS_INIT}
+                            utils_qt
+)
+
+target_include_directories(utils_qt_tests
+                            PRIVATE
+                                ${PROJECT_SOURCE_DIR}/src/includes
+                                ${PROJECT_BINARY_DIR}/includes
+                                ${GMOCK_INCLUDE_DIRS}
+                                ${GTEST_INCLUDE_DIRS}
 )
 
 enableCodeCoverage(utils_qt_tests)
