--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -1,12 +1,8 @@
 
 project( QtExt )
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.16)
 
-if(POLICY CMP0020)
-	cmake_policy(SET CMP0020 NEW)
-endif(POLICY CMP0020)
-
-find_package(Qt5Widgets REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
 include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src)
 
@@ -20,10 +16,10 @@ set(LIB_HEADERS
   qtext_progressbar.hpp
 )
 
-qt5_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
+qt6_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
 
 add_library(QtExt SHARED ${LIB_SRC} ${LIB_MOCFILES} ${LIB_HEADERS})
-target_link_libraries(QtExt Qt5::Widgets)
+target_link_libraries(QtExt Qt::Widgets)
 
 register_target(NAME QtExt
                 SOURCES ${LIB_SRC} ${LIB_MOCFILES}
