--- a/cmake/OpenLibraryConfig.cmake.in
+++ b/cmake/OpenLibraryConfig.cmake.in
@@ -18,7 +18,7 @@ if(OpenLibrary_FIND_COMPONENTS)
 
         if(NOT TARGET @OPENLIBRARY_NAMESPACE@${component})  #does target already exist?
 
-            include(${OPENLIBRARY_CMAKE_DIR}/private/OpenLibrary_${component}Config.cmake)
+            include(${OPENLIBRARY_CMAKE_DIR}/OpenLibrary_${component}Config.cmake)
 
             string(TOUPPER ${component} COMPONENT)
             set(OPENLIBRARY_${COMPONENT}_LIBRARIES @OPENLIBRARY_NAMESPACE@${component})
