automatically choose between qt5 and qt6

--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -2,7 +2,13 @@
 project( QtExt )
 cmake_minimum_required(VERSION 3.16)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 COMPONENTS Widgets)
+if(Qt6_FOUND)
+    message("Linking ${PROJECT_NAME} against Qt6")
+else()
+    find_package(Qt5 5.15 COMPONENTS REQUIRED Widgets)
+    message("Linking ${PROJECT_NAME} against Qt5")
+endif()
 
 include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src)
 
@@ -16,7 +22,7 @@ set(LIB_HEADERS
   qtext_progressbar.hpp
 )
 
-qt6_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
+qt_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
 
 add_library(QtExt SHARED ${LIB_SRC} ${LIB_MOCFILES} ${LIB_HEADERS})
 target_link_libraries(QtExt Qt::Widgets)
